--- a/Rebus.AzureServiceBus.Tests/Rebus.AzureServiceBus.Tests.csproj
+++ b/Rebus.AzureServiceBus.Tests/Rebus.AzureServiceBus.Tests.csproj
@@ -34,6 +34,8 @@
     <DefineConstants>NETSTANDARD1_6</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\Rebus.AzureServiceBus\AzureServiceBus\AzureServiceBusEntityNameHelper.cs" Link="Links\AzureServiceBusEntityNameHelper.cs" />
+    <Compile Include="..\Rebus.AzureServiceBus\AzureServiceBus\AzureServiceBusTopicNameConvention.cs" Link="Links\AzureServiceBusTopicNameConvention.cs" />
     <Compile Include="..\Rebus.AzureServiceBus\Internals\AsyncHelpers.cs" Link="Extensions\AsyncHelpers.cs" />
     <Compile Include="..\Rebus.AzureServiceBus\Internals\ManagementExtensions.cs" Link="Extensions\ManagementExtensions.cs" />
   </ItemGroup>
@@ -57,5 +59,8 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Links\" />
   </ItemGroup>
 </Project>
