--- a/Rebus.AzureServiceBus.Tests/Rebus.AzureServiceBus.Tests.csproj
+++ b/Rebus.AzureServiceBus.Tests/Rebus.AzureServiceBus.Tests.csproj
@@ -35,7 +35,7 @@
     <Compile Include="..\Rebus.AzureServiceBus\Internals\ManagementExtensions.cs" Link="Links\ManagementExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Azure.Data.Tables" Version="12.0.0-beta.7" />
+    <PackageReference Include="Azure.Data.Tables" Version="12.0.1" />
     <PackageReference Include="Microsoft.Identity.Client" Version="4.25.0" />
     <PackageReference Include="microsoft.net.test.sdk" Version="16.8.3" />
     <PackageReference Include="nunit" Version="3.13.0" />
