--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-image: Visual Studio 2019
+image: Visual Studio 2022
 
 shallow_clone: true
 
@@ -10,5 +10,7 @@ before_build:
   - appveyor-retry dotnet restore -v Minimal
 
 build_script:
-  - dotnet build Rebus.AzureServiceBus -c Release 
-  - dotnet build Rebus.AzureServiceBus.Tests -c Release 
+  - dotnet build Rebus.AzureServiceBus -c Release --no-restore
+
+test_script:
+  - dotnet test Rebus.AzureServiceBus.Tests -c Release --no-restore
