--- a/Rebus.AzureServiceBus/Rebus.AzureServiceBus.csproj
+++ b/Rebus.AzureServiceBus/Rebus.AzureServiceBus.csproj
@@ -1,30 +1,28 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
-  <PropertyGroup>
-    <OutputType>Library</OutputType>
-    <RootNamespace>Rebus</RootNamespace>
-    <AssemblyName>Rebus.AzureServiceBus</AssemblyName>
-    <LangVersion>10</LangVersion>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
-    <Authors>mookid8000</Authors>
-    <PackageProjectUrl>https://rebus.fm/what-is-rebus/</PackageProjectUrl>
-    <Copyright>Copyright Rebus FM ApS 2012</Copyright>
-    <PackageTags>rebus events</PackageTags>
-    <PackageDescription>Provides an Azure Service Bus transport for Rebus</PackageDescription>
-    <RepositoryUrl>https://github.com/rebus-org/Rebus</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageIcon>little_rebusbus2_copy-500x500.png</PackageIcon>
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="azure.identity" Version="1.4.1" />
-    <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.5.1" />
-    <PackageReference Include="Rebus" Version="[6, 7)" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="..\artwork\little_rebusbus2_copy-500x500.png">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
-  </ItemGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
+	<PropertyGroup>
+		<OutputType>Library</OutputType>
+		<RootNamespace>Rebus</RootNamespace>
+		<LangVersion>10</LangVersion>
+		<TargetFrameworks>netstandard2.0</TargetFrameworks>
+		<Authors>mookid8000</Authors>
+		<PackageProjectUrl>https://rebus.fm/what-is-rebus/</PackageProjectUrl>
+		<Copyright>Copyright Rebus FM ApS 2012</Copyright>
+		<PackageTags>rebus events</PackageTags>
+		<PackageDescription>Provides an Azure Service Bus transport for Rebus</PackageDescription>
+		<RepositoryUrl>https://github.com/rebus-org/Rebus</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageIcon>little_rebusbus2_copy-500x500.png</PackageIcon>
+	</PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="azure.identity" Version="1.7.0" />
+		<PackageReference Include="Azure.Messaging.ServiceBus" Version="7.10.0" />
+		<PackageReference Include="Rebus" Version="6.6.5" />
+	</ItemGroup>
+	<ItemGroup>
+		<None Include="..\artwork\little_rebusbus2_copy-500x500.png">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
+	</ItemGroup>
 </Project>
