--- a/Rebus.AzureServiceBus/Rebus.AzureServiceBus.csproj
+++ b/Rebus.AzureServiceBus/Rebus.AzureServiceBus.csproj
@@ -18,6 +18,7 @@
 		<PackageReference Include="azure.identity" Version="1.8.0" />
 		<PackageReference Include="Azure.Messaging.ServiceBus" Version="7.11.1" />
 		<PackageReference Include="Rebus" Version="6.6.5" />
+		<PackageReference Include="System.Threading.Channels" Version="7.0.0" />
 	</ItemGroup>
 	<ItemGroup>
 		<None Include="..\artwork\little_rebusbus2_copy-500x500.png">
