--- a/Rebus.AzureServiceBus.Tests/Rebus.AzureServiceBus.Tests.csproj
+++ b/Rebus.AzureServiceBus.Tests/Rebus.AzureServiceBus.Tests.csproj
@@ -5,6 +5,7 @@
 		<LangVersion>10</LangVersion>
 	</PropertyGroup>
 	<ItemGroup>
+		<PackageReference Include="Azure.ResourceManager.ServiceBus" Version="1.0.0" />
 		<PackageReference Include="Hypothesist.Rebus" Version="2.1.44" />
 		<PackageReference Include="microsoft.net.test.sdk" Version="17.4.1" />
 		<PackageReference Include="nunit" Version="3.13.3" />
